Added grass block textures

--- a/vs-src/GrassBlock/GrassBlock/GrassBlock.vcxproj
+++ b/vs-src/GrassBlock/GrassBlock/GrassBlock.vcxproj
@@ -149,6 +149,8 @@
     <ClCompile Include="glad.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Shader.cpp" />
+    <ClCompile Include="stb.cpp" />
+    <ClCompile Include="texture.cpp" />
     <ClCompile Include="VAO.cpp" />
     <ClCompile Include="VBO.cpp" />
   </ItemGroup>
@@ -159,8 +161,12 @@
   <ItemGroup>
     <ClInclude Include="EBO.h" />
     <ClInclude Include="shader.h" />
+    <ClInclude Include="texture.h" />
     <ClInclude Include="VAO.h" />
     <ClInclude Include="VBO.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Users\thoma\OneDrive - Avans Hogeschool\Documents\Blok 12\Individueel Project\GrassBlock.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
